# rust-trend

./: .gitignore  Cargo.toml
src/: client.rs  region_interest.rs  request_handler.rs
