[package]
name = "rtrend"
version = "0.1.5"
edition = "2018"
authors = ["shadawck"]
description = "Unofficial API for interacting with Google Trend"
readme = "README.md"
repository = "https://github.com/shadawck/rust-trend"
homepage = "https://github.com/shadawck/rust-trend"
license = "MIT OR Apache-2.0"
keywords = ["google_trend", "trend", "google", "api", "web"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
strum = "0.21"
strum_macros = "0.21"
compact_str = { version = "0.6.1", features = ["serde"] }

[profile.release]
lto = true
opt-level = 3 
panic = "unwind"
